# mcsc

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  RUN.sh  build.rs  flake.nix  make.sh  mcsc_client.toml  mcsc_server.toml  run  run.sh  server.toml
proto/: actions.proto
src/: actions.proto  backups.rs  cli.rs  client-test.rs  client.rs  common.rs  gui.rs  net.rs  server-state.rs  server-test.rs  server.rs  server.rs.bak  server_state.rs  testing.rs
