[package]
name = "mcsc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcsc-server"
path = "src/server.rs"

[[bin]]
name = "mcsc-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["full"] }
magic-crypt = "*"
rand = "*"
serde = "*"
toml = "*"
serde_derive = "*"
lazy_static = "*"
parking_lot = "*"
antidote = "*"
tokio-stream = "*"
futures = { version = "*", default-features = false, features = ["alloc"] }

[build-dependencies]
tonic-build = "*"
