[package]
name = "mcsc"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "mcsc-server"
path = "src/server.rs"

[[bin]]
name = "mcsc-cli"
path = "src/cli.rs"

[[bin]]
name = "mcsc-gui"
path = "src/gui.rs"

[dependencies]
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["full"] }
magic-crypt = "*"
rand = "*"
serde = "*"
toml = "*"
serde_derive = "*"
lazy_static = "*"
antidote = "*"
tokio-stream = "*"
futures = { version = "*", default-features = false, features = ["alloc"] }
rolling-set = "*"
lazy-regex = "*"

[build-dependencies]
tonic-build = "*"
