[package]
name = "mcsc"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "mcsc-server"
path = "src/server.rs"

[[bin]]
name = "mcsc-cli"
path = "src/cli.rs"

[[bin]]
name = "mcsc-gui"
path = "src/gui.rs"

[[bin]]
name = "server-test"
path = "src/server-test.rs"

[[bin]]
name = "client-test"
path = "src/client-test.rs"

[dependencies]
tokio = { version = "*", features = ["full"] }
magic-crypt = "*"
rand = "*"
serde = "*"
toml = "*"
serde_derive = "*"
lazy_static = "*"
rolling-set = "*"
lazy-regex = "*"
bincode = "*"
color-eyre = "0.6.2"
